# cft

cft/: Dockerfile  docker-compose.yaml  main.py  manual.markdown  pyproject.toml  requirements.txt
cft/migrations/: env.py
cft/settings/: config.py
cft/src/auth/: auth.py  database.py  manager.py  shemas.py
cft/src/base_models/: meta.py
cft/src/worker/: models.py
cft/test/: auth_test.py  conf_test.py
